--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,41 +1,103 @@
-body{
-    background-color: #97aaab;
-    display: flex;
-    flex-direction: column;
-    height: 220vh;
+html, body{
+  width: 100%;
+  height: 100%;
 
+}
+body{
+   display: flex;
+    flex-direction: column;
+    align-content: center;
+    font-family: 'Lato', sans-serif;
+    background-color: #ffd241;
+    box-sizing: border-box;
+  }
+img{
+  max-width: 100%;
+  margin: auto;
+}
+
+header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 90%;
+  margin: auto;
+}
+
+.headerimg{
+  width: 40%;
+}
+
+.headertxt{
+  max-width: 50%;
+  text-align: center;
+}
+
+h1, h2, h3{
+  font-family: 'Montserrat', sans-serif;
 }
 
 /*Navigation*/
-/* Style the navbar */
-#navbar {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  /* Navbar links */
-  #navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-  }
-  
-  /* Page content */
-  .content {
-    padding: 16px;
-  }
-  
-  /* The sticky class is added to the navbar with JS when it reaches its scroll position */
-  .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
-  
-  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-  .sticky + .content {
-    padding-top: 60px;
-  }
+.nav {
+  background-color: #f6f6f6;
+  opacity: 0.5;
+  position: -webkit-sticky;
+  text-align: center;
+
+}
+.nav li{
+  display: inline-block;
+  padding: 1em;
+
+}
+
+
+.nav a{
+  color: #000;
+  font-size: 1.5em;
+}
+
+.nav li:hover{
+  background-color: #C1CDCD;
+}
+
+.sticky {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  border-top: 0;
+}
+
+/*Innehåll*/
+.content{
+  background-color:#fff;
+  box-shadow: 10px 10px 5px 0px rgba(86,86,86,1);
+  border-radius: 8px;
+  flex-grow: 1;
+  width: 60%;
+  min-height: 100%;
+  margin:2em auto;
+  padding: 2em;
+  align-content: center;
+}
+
+#first{
+margin: auto;
+width: 80%;
+}
+
+.nav, header, .content, footer{
+  flex-shrink: 0;
+}
+
+footer{
+  background-color: rgba(86,86,86,1);
+  color: #fff;
+  text-align: center;
+}
+
+footer a{
+  color: #fff;
+}
